// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when interchange extension elements duplicates multiple names in base interchange should have validation failures 1`] = `"Interchange additions InterchangeName redeclares property DomainEntityElementName1 of base Interchange."`;

exports[`when interchange extension elements duplicates multiple names in base interchange should have validation failures 2`] = `
Object {
  "column": 18,
  "line": 10,
  "tokenText": "DomainEntityElementName1",
}
`;

exports[`when interchange extension elements duplicates multiple names in base interchange should have validation failures 3`] = `"Interchange additions InterchangeName redeclares property DomainEntityElementName2 of base Interchange."`;

exports[`when interchange extension elements duplicates multiple names in base interchange should have validation failures 4`] = `
Object {
  "column": 18,
  "line": 11,
  "tokenText": "DomainEntityElementName2",
}
`;

exports[`when validating interchange extension elements duplicates names in base interchange should have validation failures 1`] = `"Interchange additions InterchangeName redeclares property DomainEntityElementName of base Interchange."`;

exports[`when validating interchange extension elements duplicates names in base interchange should have validation failures 2`] = `
Object {
  "column": 18,
  "line": 9,
  "tokenText": "DomainEntityElementName",
}
`;
